# BestBuy-Bot

./: .envrc  .gitignore  .treefmt.toml  README.md  bot.py  config.yaml  ex.info.py  flake.nix  info.py  justfile  pyproject.toml  selenium_driver.py
src/main/: __init__.py
src/main/bot/: __init__.py  bot.py
src/main/config/: __init__.py  info.py
src/main/driver/: __init__.py  selenium_driver.py
