[project]
name = "main"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Your Name", email = "your@email.com" }]
dependencies = [
  "omegaconf>=2.3.0",
  "selenium>=4.28.1",
  "undetected-chromedriver>=3.5.5",
  "setuptools>=75.8.0",
  "loguru>=0.7.3",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
"main" = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["pytest>=8.3.4"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/main"]
